include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

add_executable(check_basic_properties paper_blocktree/BlockTreeBasicPropertiesFixture.cpp)
add_executable(check_block_tree paper_blocktree/BlockTreeFixture.cpp)
add_executable(check_block_tree_without_cleanning paper_blocktree/BlockTreeWithoutCleanningFixture.cpp)
add_executable(check_heuristic_concatenate_block_tree paper_blocktree/HeuristicConcatenateBlockTreeFixture.cpp)
add_executable(check_heuristic_block_tree paper_blocktree/HeuristicBlockTreeFixture.cpp)
add_executable(check_liberal_heuristic_block_tree paper_blocktree/LiberalHeuristicBlockTreeFixture.cpp)
add_executable(check_conservative_heuristic_block_tree paper_blocktree/ConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_other_conservative_heuristic_block_tree paper_blocktree/OtherConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_other_back_front_block_tree paper_blocktree/OtherBackFrontBlockTreeFixture.cpp)
add_executable(check_back_front_block_tree paper_blocktree/BackFrontBlockTreeFixture.cpp)
add_executable(check_conservative_optimized_heuristic_block_tree paper_blocktree/ConservativeOptimizedHeuristicBlockTreeFixture.cpp)
add_executable(check_color_block_tree paper_blocktree/ColorBlockTreeFixture.cpp)
add_executable(check_color_pruning_block_tree paper_blocktree/ColorPruningBlockTreeFixture.cpp)
add_executable(check_reverse_color_block_tree paper_blocktree/ReverseColorBlockTreeFixture.cpp)
add_executable(check_c_block_tree compressed/CBlockTreeFixture.cpp)
add_executable(check_bps_c compressed/BPSCBlockTreeFixture.cpp)


add_executable(check_p_c_block_tree compressed/PCBlockTreeFixture.cpp)
add_executable(check_p_basic_properties padding_blocktree/PBlockTreeBasicPropertiesFixture.cpp)
add_executable(check_p_block_tree padding_blocktree/PBlockTreeFixture.cpp)
add_executable(check_p_block_tree_without_cleanning padding_blocktree/PBlockTreeWithoutCleanningFixture.cpp)
add_executable(check_p_conservative_heuristic_block_tree padding_blocktree/PConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_p_real_conservative_heuristic_block_tree padding_blocktree/PRealConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_p_real_other_conservative_heuristic_block_tree padding_blocktree/PRealOtherConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_p_other_conservative_heuristic_block_tree padding_blocktree/POtherConservativeHeuristicBlockTreeFixture.cpp)
add_executable(check_p_real_back_front_block_tree padding_blocktree/PRealBackFrontBlockTreeFixture.cpp)
add_executable(check_p_real_other_back_front_block_tree padding_blocktree/PRealOtherBackFrontBlockTreeFixture.cpp)
add_executable(check_p_other_back_front_block_tree padding_blocktree/POtherBackFrontBlockTreeFixture.cpp)
add_executable(check_p_back_front_block_tree padding_blocktree/PBackFrontBlockTreeFixture.cpp)
add_executable(check_p_color_block_tree padding_blocktree/PColorBlockTreeFixture.cpp)
add_executable(check_p_real_color_block_tree padding_blocktree/PRealColorBlockTreeFixture.cpp)
add_executable(check_p_color_pruning_block_tree padding_blocktree/PColorPruningBlockTreeFixture.cpp)
add_executable(check_p_reverse_color_block_tree padding_blocktree/PReverseColorBlockTreeFixture.cpp)
add_executable(check_p_conservative_optimized_heuristic_block_tree padding_blocktree/PConservativeOptimizedHeuristicBlockTreeFixture.cpp)
add_executable(check_p_real_conservative_optimized_heuristic_block_tree padding_blocktree/PRealConservativeOptimizedHeuristicBlockTreeFixture.cpp)
add_executable(check_p_liberal_heuristic_block_tree padding_blocktree/PLiberalHeuristicBlockTreeFixture.cpp)
add_executable(check_p_heuristic_concatenate_block_tree padding_blocktree/PHeuristicConcatenateBlockTreeFixture.cpp)
add_executable(check_p_heuristic_block_tree padding_blocktree/PHeuristicBlockTreeFixture.cpp)
add_executable(check_bps_pc compressed/BPSPCBlockTreeFixture.cpp)
add_executable(check_pbtrlcsacst compressed/PBTRLCSACSTFixture.cpp)
add_executable(check_pbtisarlcsacst compressed/PBTISARLCSACSTFixture.cpp)
add_executable(check_pbtcst compressed/PBTCSTFixture.cpp)
add_executable(check_cst_sada_rlcsa compressed/CST_SADA_RLCSAFixture.cpp)
add_executable(check_cst_sct3_rlcsa compressed/CST_SCT3_RLCSAFixture.cpp)

add_subdirectory(googletest)




target_link_libraries(check_basic_properties gtest gtest_main)
target_link_libraries(check_basic_properties blocktree)


target_link_libraries(check_p_basic_properties gtest gtest_main)
target_link_libraries(check_p_basic_properties blocktree)


target_link_libraries(check_block_tree gtest gtest_main)
target_link_libraries(check_block_tree blocktree)

target_link_libraries(check_p_block_tree gtest gtest_main)
target_link_libraries(check_p_block_tree blocktree)



target_link_libraries(check_block_tree_without_cleanning gtest gtest_main)
target_link_libraries(check_block_tree_without_cleanning blocktree)

target_link_libraries(check_p_block_tree_without_cleanning gtest gtest_main)
target_link_libraries(check_p_block_tree_without_cleanning blocktree)

target_link_libraries(check_heuristic_concatenate_block_tree gtest gtest_main)
target_link_libraries(check_heuristic_concatenate_block_tree blocktree)

target_link_libraries(check_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_heuristic_block_tree blocktree)


target_link_libraries(check_p_heuristic_concatenate_block_tree gtest gtest_main)
target_link_libraries(check_p_heuristic_concatenate_block_tree blocktree)

target_link_libraries(check_p_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_heuristic_block_tree blocktree)


target_link_libraries(check_liberal_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_liberal_heuristic_block_tree blocktree)

target_link_libraries(check_p_liberal_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_liberal_heuristic_block_tree blocktree)

target_link_libraries(check_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_conservative_heuristic_block_tree blocktree)
target_link_libraries(check_other_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_other_conservative_heuristic_block_tree blocktree)

target_link_libraries(check_other_back_front_block_tree gtest gtest_main)
target_link_libraries(check_other_back_front_block_tree blocktree)
target_link_libraries(check_back_front_block_tree gtest gtest_main)
target_link_libraries(check_back_front_block_tree blocktree)

target_link_libraries(check_p_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_conservative_heuristic_block_tree blocktree)
target_link_libraries(check_p_real_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_real_conservative_heuristic_block_tree blocktree)
target_link_libraries(check_p_real_other_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_real_other_conservative_heuristic_block_tree blocktree)
target_link_libraries(check_p_other_conservative_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_other_conservative_heuristic_block_tree blocktree)
target_link_libraries(check_p_real_conservative_optimized_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_real_conservative_optimized_heuristic_block_tree blocktree)
target_link_libraries(check_p_real_back_front_block_tree gtest gtest_main)
target_link_libraries(check_p_real_back_front_block_tree blocktree)
target_link_libraries(check_p_back_front_block_tree gtest gtest_main)
target_link_libraries(check_p_back_front_block_tree blocktree)
target_link_libraries(check_p_real_other_back_front_block_tree gtest gtest_main)
target_link_libraries(check_p_real_other_back_front_block_tree blocktree)
target_link_libraries(check_p_other_back_front_block_tree gtest gtest_main)
target_link_libraries(check_p_other_back_front_block_tree blocktree)

target_link_libraries(check_conservative_optimized_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_conservative_optimized_heuristic_block_tree blocktree)

target_link_libraries(check_p_conservative_optimized_heuristic_block_tree gtest gtest_main)
target_link_libraries(check_p_conservative_optimized_heuristic_block_tree blocktree)



target_link_libraries(check_color_pruning_block_tree gtest gtest_main)
target_link_libraries(check_color_pruning_block_tree blocktree)

target_link_libraries(check_p_color_pruning_block_tree gtest gtest_main)
target_link_libraries(check_p_color_pruning_block_tree blocktree)

target_link_libraries(check_color_block_tree gtest gtest_main)
target_link_libraries(check_color_block_tree blocktree)

target_link_libraries(check_p_color_block_tree gtest gtest_main)
target_link_libraries(check_p_color_block_tree blocktree)

target_link_libraries(check_p_real_color_block_tree gtest gtest_main)
target_link_libraries(check_p_real_color_block_tree blocktree)

target_link_libraries(check_reverse_color_block_tree gtest gtest_main)
target_link_libraries(check_reverse_color_block_tree blocktree)

target_link_libraries(check_p_reverse_color_block_tree gtest gtest_main)
target_link_libraries(check_p_reverse_color_block_tree blocktree)


target_link_libraries(check_c_block_tree gtest gtest_main)
target_link_libraries(check_c_block_tree blocktree)
target_link_libraries(check_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)


target_link_libraries(check_p_c_block_tree gtest gtest_main)
target_link_libraries(check_p_c_block_tree blocktree)
target_link_libraries(check_p_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_p_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_p_c_block_tree ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)



target_link_libraries(check_bps_c gtest gtest_main)
target_link_libraries(check_bps_c blocktree)
target_link_libraries(check_bps_c ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_bps_c ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_bps_c ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)

target_link_libraries(check_bps_pc gtest gtest_main)
target_link_libraries(check_bps_pc blocktree)
target_link_libraries(check_bps_pc ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_bps_pc ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_bps_pc ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)

target_link_libraries(check_pbtcst gtest gtest_main)
target_link_libraries(check_pbtcst blocktree)
target_link_libraries(check_pbtcst ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_pbtcst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_pbtcst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)

target_link_libraries(check_pbtrlcsacst gtest gtest_main)
target_link_libraries(check_pbtrlcsacst blocktree)
target_link_libraries(check_pbtrlcsacst ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_pbtrlcsacst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_pbtrlcsacst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)
target_link_libraries(check_pbtrlcsacst gctbio)
target_link_libraries(check_pbtrlcsacst textIndexes)
target_link_libraries(check_pbtrlcsacst cds)



target_link_libraries(check_pbtisarlcsacst gtest gtest_main)
target_link_libraries(check_pbtisarlcsacst blocktree)
target_link_libraries(check_pbtisarlcsacst ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_pbtisarlcsacst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_pbtisarlcsacst ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)
target_link_libraries(check_pbtisarlcsacst gctbio)
target_link_libraries(check_pbtisarlcsacst textIndexes)
target_link_libraries(check_pbtisarlcsacst cds)


target_link_libraries(check_cst_sada_rlcsa gtest gtest_main)
target_link_libraries(check_cst_sada_rlcsa blocktree)
target_link_libraries(check_cst_sada_rlcsa ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_cst_sada_rlcsa ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_cst_sada_rlcsa ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)
target_link_libraries(check_cst_sada_rlcsa gctbio)
target_link_libraries(check_cst_sada_rlcsa textIndexes)
target_link_libraries(check_cst_sada_rlcsa cds)



target_link_libraries(check_cst_sct3_rlcsa gtest gtest_main)
target_link_libraries(check_cst_sct3_rlcsa blocktree)
target_link_libraries(check_cst_sct3_rlcsa ${CMAKE_SOURCE_DIR}/lib/libsdsl.a)
target_link_libraries(check_cst_sct3_rlcsa ${CMAKE_SOURCE_DIR}/lib/libdivsufsort.a)
target_link_libraries(check_cst_sct3_rlcsa ${CMAKE_SOURCE_DIR}/lib/libdivsufsort64.a)
target_link_libraries(check_cst_sct3_rlcsa gctbio)
target_link_libraries(check_cst_sct3_rlcsa textIndexes)
target_link_libraries(check_cst_sct3_rlcsa cds)